일단 진도 안나가서 방법 바꾸기 위해서 기존 내용 저장, docs 폴더 밑에 다른 memory sync 방법 고안

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -729,9 +729,9 @@
                 let xmlResult = null;
                 
                 // 1. 전역 demo 인스턴스에서 modeler 확인
-                if (window.demo && window.demo.bpmnModelerService) {
-                    xmlResult = await window.demo.bpmnModelerService.exportDiagramAsXML();
-                    currentXmlContent = xmlResult;
+                if (window.demo && window.demo.modeler) {
+                    xmlResult = await window.demo.modeler.saveXML({ format: true });
+                    currentXmlContent = xmlResult.xml;
                 }
                 // 2. 전역 modeler 확인
                 else if (window.modeler) {
